# Benek-Pet-Sitter-Finder-App

./: .gitignore  README.md  dbConnect.js  root.crt  root.key
benek_server/: .gitignore  CMakeLists.txt  main.cc
benek_server/constants/: ErrorMessages.h
benek_server/controllers/auth_token_controller/: AuthToken.h  get_new_access_token_handler.cpp  logout_handler.cpp
benek_server/exceptions/MongoSchemaException/: MongoSchemaException.cpp  MongoSchemaException.h
benek_server/exceptions/MongoValidationException/: MongoValidationException.cpp  MongoValidationException.h
benek_server/exceptions/NotFoundException/: NotFoundException.cpp  NotFoundException.h
benek_server/include/env_helper/: EnvHelper.cpp  EnvHelper.h
benek_server/include/jwt_creater/: JwtCreater.cpp  JwtCreater.h
benek_server/include/jwt_verifier/: JwtVerifier.cpp  JwtVerifier.h
benek_server/include/mongo_db_connection_pool/: MongoDbConnectionPool.cpp  MongoDbConnectionPool.h
benek_server/include/mongo_db_helper/: MongoDBHelper.cpp  MongoDBHelper.h
benek_server/middleware/auth_middleware/: AuthMiddleware.cpp  AuthMiddleware.h
benek_server/models/CardGuidModel/: CardGuidModel.cpp  CardGuidModel.h
benek_server/models/DeactivationModel/: DeactivationModel.cpp  DeactivationModel.h
benek_server/models/MongoSchema/: MongoSchema.cpp  MongoSchema.h
benek_server/models/TagModel/: TagModel.cpp  TagModel.h
benek_server/models/UserIdentityModel/: UserIdentityModel.cpp  UserIdentityModel.h
benek_server/models/UserLocationModel/: UserLocationModel.cpp  UserLocationModel.h
benek_server/models/UserNationalIdModel/: UserNationalIdModel.cpp  UserNationalIdModel.h
benek_server/models/UserProfileImageModel/: UserProfileImageModel.cpp  UserProfileImageModel.h
benek_server/models/UserSchema/: UserSchema.cpp  UserSchema.h
benek_server/models/UserStarModel/: UserStarModel.cpp  UserStarModel.h
benek_server/models/UserTokenSchema/: UserTokenSchema.cpp  UserTokenSchema.h
benek_server/test/: CMakeLists.txt
client/Admin/benek_kulube/: README.md  pubspec.yaml
client/Mobile/benek/: README.md  deps.txt  pubspec.yaml
mediaServer/: config.js  ffmpeg  ffprobe  index.js  package-lock.json  package.json
mediaServer/controllers/: deleteAssetController.js  getAssetController.js  getVideoThumbnailController.js  uploadController.js
mediaServer/ffmpeg/6.0_1/: INSTALL_RECEIPT.json
mediaServer/helpers/: checkFileExistsHelper.js  checkPdfFileHelper.js  cleanTempFilesHelper.js  compressImageHelper.js  compressPdfHelper.js  compressVideoHelper.js  cropImageHelper.js  cropVideoHelper.js  getAspectRatioHelper.js  getVideoDimensionsHelper.js  getVideoDurationHelper.js  getVideoMetaDataHelper.js  getVideoThumbnailHelper.js
mediaServer/helpers/uploadEndPointHelpers/: compressProcessHelper.js  getMaxFileSizeAndMaxDurationHelper.js  setAspectRatioHelper.js  writeImageFileAfterProcessHelper.js  writeVideoFileAfterProcessHelper.js
mediaServer/miidleWare/: auth.js
server/: README.md  dbConnect.js  index.js  package-lock.json  package.json  server.js  verifyToken.js
server/certificates/dkim/: benekAppDKIMSelector45.benekapp.com.pem
server/controllers/adminRoutes/: adminLoginController.js  banUserController.js  getActiveUserCountController.js  getAdminLoginQrCodeController.js  getAllEmployeesController.js  getBannedUsersList.js  getBannedUsersListController.js  getExpensePaperByIdController.js  getExpensePaperListController.js  getInvoicePaperByIdController.js  getInvoicePaperListController.js  getPaymentsFromDateController.js  getPaymentsOnPoolController.js  getPunishmentCountController.js  getPunishmentRecordsController.js  getReportedMissionByIdController.js  getReportedMissionListController.js  punishUserController.js  (+6 more)
server/cron_jobs/: deleteExpiredCareGive.js  deleteExpiredEvents.js  deleteExpiredPaymentDatas.js  deleteExpiredPunishments.js  deleteExpiredStories.js  deleteExpiredUser.js  deleteOverTimedLogs.js
server/middleware/: adminAuth.js  auth.js  editPetAuth.js  emailVerificationCheck.js  profileImage.js  regionEndPoint.js  s3Service.js  serverHandlePetProfileImage.js  serverHandleProfileImage.js  validateMission.js
server/models/: AnimalCategories.js  Chat.js  Log.js  Notification.js  Pet.js  Story.js  TempPassword.js  User.js  UserOtpVerification.js  UserToken.js
server/routes/: auth.js  paymentRedirectRoute.js  paymentRoutes.js  refreshToken.js
server/src/: care_give_pricing.json  expenseDocumentTemplate.xlsx  invoiceTemplate.xlsx  petDataset.json
server/utils/: animalCategoryReqValidationSchema.js  createPetValidationSchema.js  dateFormater.js  doesStringValueExistHelper.js  extendCareGiveHelper.js  findMatchingRouteHelper.js  generateTokens.js  getInfoOfEventTicketHelper.js  getLightWeightCareGiveInfoHelper.js  getLightWeightEventInfoHelper.js  getLightWeightMissionInfoHelper.js  getLightWeightPetInfoHelper.js  getLightWeightUserInfoHelper.js  getPetKindHelper.js  handOverInvitationValidationSchema.js  numberToTurkishHelper.js  paramRegisterSubSellerRequest.js  passportNoValidate.js  petReqValidation.js  prepareCareGiveTicketHelper.js  prepareEventTicketHelper.js  prepareExtraMissionHelper.js  routeList.js  s3Service.js  secondaryOwnerInvitationValidationSchema.js  sendNotification.js  sendOneTimePasswordEmail.js  sendValidationEmail.js  sendValidationEmailForResetEmail.js  sendValidationEmailForResetPassword.js  sendValidationSMS.js  tcNoValidate.js  userSecondaryInfoValidationSchema.js  validationSchema.js  verifyRefreshToken.js  writeMessageToChatHelper.js
server/worker_threads/: connectToDatabaseForWorkers.js  workerThreads.js
socket/: index.js  package-lock.json  package.json
sözleşmeler/: Benek Hizmet Sozlesmesi.docx  Kişisel Verilerin Korunması  “Açık Rıza Beyanı”.docx  Kişisel Verilerin Korunması ve Gizlilik Politikası.docx  benek_hizmet_sozlesmesi.md  kisisel_verilerin_korunmasi_acik_riza_beyani.md  kisisel_verilerin_korunmasi_kullanici_aydinlatma_metni.docx  kisisel_verilerin_korunmasi_kullanici_aydinlatma_metni.md  kisisel_verilerin_korunmasi_ve_gizlilik_politikasi.md
(+1157 files in other folders)
